--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,9 @@ pycparser==2.21
 pydantic==2.6.1
 pydantic_core>=2.16.2
 PyJWT==2.8.0
+pytest>=6.2.5
+pytest-cov>=4.0.0
+pytest-subtests>=0.8.0
 requests==2.31.0
 typing_extensions>=4.9.0
 urllib3==2.2.0
