--- a/requirements.txt
+++ b/requirements.txt
@@ -13,5 +13,6 @@ pytest>=6.2.5
 pytest-cov>=4.0.0
 pytest-subtests>=0.8.0
 requests==2.31.0
+sqlalchemy>=2.0.0
 typing_extensions>=4.9.0
 urllib3==2.2.0
