--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ cffi==1.16.0
 charset-normalizer==3.3.2
 cryptography==42.0.2
 idna==3.6
+openpyxl>=3.1.2
 pandas>=1.5.1
 pycparser==2.21
 pydantic==2.6.1
